--- a/dno_optimized/templates/results_template.html
+++ b/dno_optimized/templates/results_template.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Results</title>
-    <!-- <style>
-        body { font-family: 'Ubuntu Sans', Arial, sans-serif; margin: 2em; }
-        pre { background: #f0f0f0; padding: 1em; }
-        hr { margin: 2em 0; }
-    </style> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap">
+    <title>Results {{ base_path }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Results</h1>
+    <h1>Results <pre>{{ base_path }}</pre></h1>
 
     <table class="table table-striped">
         <thead>
             <tr>
-                <!-- <th>Name</th> -->
                 <th>Parameters</th>
-                <th>Losses</th>
-                <th>Video</th>
+                <th>Text Prompt</th>
+                {% if results and results|length > 0 %}
+                    {% for col in results[0].losses %}
+                        <th>{{ col }}</th>
+                    {% endfor %}
+                {% endif %}
+                <!-- <th>Video</th> -->
+                {% if results and results|length > 0 %}
+                    {% for col in results[0].metrics %}
+                        <th colspan="{{ results[0].metrics[col]|length }}">{{ col }}</th>
+                    {% endfor %}
+                {% endif %}
             </tr>
         </thead>
         <tbody>
             {% for res in results %}
                 <tr>
-                    <!-- <td>{{ res.name }}</td> -->
                     <td><pre>{{ res.args | tojson(indent=2) }}</pre></td>
-                    <td><pre>{{ res.losses | tojson(indent=2) }}</pre></td>
-                    <td>
+                    <td>{{ res.text_prompt }}</td>
+                    {% for loss in res.losses.values() %}
+                        <td>{{ loss }}</td>
+                    {% endfor %}
+                    <!-- <td>
                         {% if res.video %}
                             <video width="960" height="240" controls autoplay muted loop>
                                 <source src="{{ url_for('video', filename=res.video) }}" type="video/mp4">
@@ -37,7 +42,12 @@
                         {% else %}
                             No Video
                         {% endif %}
-                    </td>
+                    </td> -->
+                    {% for metric in res.metrics.values() %}
+                        {% for value in metric %}
+                            <td>{{ value }}</td>
+                        {% endfor %}
+                    {% endfor %}
                 </tr>
             {% endfor %}
         </tbody>
